--- a/res/layout/view_data_overlay.xml
+++ b/res/layout/view_data_overlay.xml
@@ -19,6 +19,15 @@
         android:layout_centerHorizontal="true"
         android:background="@color/dark"
         >
+
+        <Button
+            android:id="@+id/show_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="History" />
+
     </RelativeLayout>
 
 </RelativeLayout>
