--- a/res/layout/view_data_overlay.xml
+++ b/res/layout/view_data_overlay.xml
@@ -30,4 +30,14 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/current_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/date_text"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="162dp"
+        android:text="11:30P"
+        android:textColor="@color/light" />
+
 </RelativeLayout>
